--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
   --menu-list: #2e2f42;
   --btn-filters: #f4f4fd;
   --paragraph-filters: #434455;
+  --bg-gradient: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7));
 }
 
 p,
@@ -135,10 +136,17 @@ body {
 /* _____Section 1 hero_____ */
 .hero {
   background: #2e2f42;
+  background-image: var(--bg-gradient), url(../images/people-office.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   padding-top: 188px;
-  padding-bottom: 188px;
   text-align: center;
+  width: 1440px;
   height: 600px;
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
 }
 
 .hero-title {
@@ -185,6 +193,17 @@ body {
   display: flex;
   gap: 24px;
   width: 1128px;
+}
+
+.feature-list-icons {
+  width: 264px;
+  height: 112px;
+  border-radius: 4px;
+  background-color: #f4f4fd;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 8px;
 }
 
 .feature-tytle {
@@ -263,6 +282,10 @@ body {
   height: auto;
 }
 
+.team-wrap {
+  padding-bottom: 32px;
+}
+
 .team-name {
   font-weight: 500;
   font-size: 20px;
@@ -271,7 +294,7 @@ body {
   letter-spacing: 0.02em;
   color: #2e2f42;
   padding-top: 32px;
-  padding-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .team-job {
@@ -280,7 +303,92 @@ body {
   text-align: center;
   letter-spacing: 0.02em;
   color: #434455;
-  padding-bottom: 32px;
+  margin-bottom: 8px;
+}
+
+.team-soc-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.team-soc-item {
+  width: 40px;
+  height: 40px;
+}
+
+.team-soc-link {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.team-soc-link:hover {
+  background-color: #404bbf;
+}
+
+.team-soc-link:focus {
+  background-color: #404bbf;
+}
+
+.team-icons {
+  fill: #f4f4fd;
+}
+
+/* _____Section 5 clients_____ */
+.clients {
+  padding-top: 120px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.clients-tytle {
+  font-size: 36px;
+  line-height: 40px;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 72px;
+}
+
+.clients-list {
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.clients-item {
+}
+
+.clients-icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: #8e8f99;
+  box-sizing: border-box;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  width: 168px;
+  height: 88px;
+}
+
+.clients-icons:hover {
+  fill: #404bbf;
+  border: 1px solid #404bbf;
+}
+
+.clients-icons:focus {
+  fill: #404bbf;
+  border: 1px solid #404bbf;
 }
 
 /* _____footer_____ */
@@ -288,7 +396,14 @@ body {
   background: #2e2f42;
   padding-top: 100px;
   padding-bottom: 100px;
-  height: 312px;
+  width: 1440px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.footer-container {
+  display: flex;
+  gap: 120px;
 }
 
 .footer-logo-web {
@@ -322,6 +437,43 @@ body {
   color: #f4f4fd;
   width: 264px;
   margin-top: 16px;
+}
+
+.footer-soc-item {
+  width: 40px;
+  height: 40px;
+}
+
+.footer-soc-list {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-soc-link {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: rgba(77, 90, 229, 1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-soc-tytle {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+
+.footer-soc-link:hover {
+  background-color: #31D0AA;
+}
+
+.footer-soc-link:focus {
+  background-color: #31D0AA;
 }
 
 /* _________________PAGE 2 - PORTFOLIO_________________ */
