--- a/css/styles.css
+++ b/css/styles.css
@@ -48,10 +48,12 @@ body {
 
 .header-container {
   display: flex;
-  border-bottom: 1px solid #e7e9fc;
 }
 
 .header {
+  border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-navigation {
@@ -481,6 +483,7 @@ body {
 .filters {
   text-align: center;
   padding-bottom: 120px;
+  padding-top: 96px;
 }
 
 .filters-buttons-list {
@@ -490,7 +493,6 @@ body {
   gap: 24px;
   justify-content: center;
   margin-bottom: 72px;
-  padding-top: 96px;
 }
 
 .filters-button {
